[gd_scene load_steps=9 format=3 uid="uid://cu7h0eew86she"]

[ext_resource type="Script" uid="uid://eys51gjqls50" path="res://Assets/Scenes/main_menu.gd" id="1_dy76o"]
[ext_resource type="LabelSettings" uid="uid://cmhtmc70kii0m" path="res://Assets/TitleLabelSettings.tres" id="1_neovj"]
[ext_resource type="PackedScene" uid="uid://dpch8vd55wsiy" path="res://Assets/Scenes/card.tscn" id="2_dvcnj"]
[ext_resource type="Texture2D" uid="uid://bvcm5pa70bll6" path="res://Assets/Textures/felt.png" id="2_g1m8g"]
[ext_resource type="Texture2D" uid="uid://ckitacn7wg1ey" path="res://Assets/Textures/DiamondPatternA.png" id="3_y3yoh"]
[ext_resource type="FontFile" uid="uid://c5ge3lijolhgo" path="res://Assets/BoldPixels.ttf" id="5_t3t6v"]
[ext_resource type="Script" uid="uid://8pwpvwuakxjm" path="res://Assets/Scenes/settings.gd" id="7_shbfh"]

[sub_resource type="LabelSettings" id="LabelSettings_ibstr"]
font = ExtResource("5_t3t6v")
font_size = 24

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dy76o")

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color(1.15514e-06, 0.636547, 0.362807, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_g1m8g")
expand_mode = 1
stretch_mode = 1

[node name="Pattern" type="TextureRect" parent="Background"]
visible = false
self_modulate = Color(0, 0, 0, 0.145098)
texture_repeat = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_y3yoh")
expand_mode = 1
stretch_mode = 1

[node name="Main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="List" type="VBoxContainer" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -93.0
offset_right = 144.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Main/List"]
layout_mode = 2
text = "Blackjack"
label_settings = ExtResource("1_neovj")
horizontal_alignment = 1

[node name="PlayBtn" type="Button" parent="Main/List"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Label2" type="Label" parent="Main/List/PlayBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"
label_settings = SubResource("LabelSettings_ibstr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsBtn" type="Button" parent="Main/List"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Label2" type="Label" parent="Main/List/SettingsBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"
label_settings = SubResource("LabelSettings_ibstr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RulesBtn" type="Button" parent="Main/List"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Label2" type="Label" parent="Main/List/RulesBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "How To Play"
label_settings = SubResource("LabelSettings_ibstr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitBtn" type="Button" parent="Main/List"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Label2" type="Label" parent="Main/List/QuitBtn"]
modulate = Color(1, 0.240133, 0.46179, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit Game"
label_settings = SubResource("LabelSettings_ibstr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Card" parent="Main" instance=ExtResource("2_dvcnj")]
position = Vector2(320, 176)

[node name="Card2" parent="Main" instance=ExtResource("2_dvcnj")]
position = Vector2(448, 144)

[node name="Card3" parent="Main" instance=ExtResource("2_dvcnj")]
position = Vector2(576, 112)

[node name="Card4" parent="Main" instance=ExtResource("2_dvcnj")]
position = Vector2(704, 144)

[node name="Card5" parent="Main" instance=ExtResource("2_dvcnj")]
position = Vector2(832, 176)

[node name="Help" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BGshade" type="ColorRect" parent="Help"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="ScrollContainer" type="ScrollContainer" parent="Help/BGshade"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Help/BGshade/ScrollContainer"]
layout_mode = 2
size_flags_stretch_ratio = 2.76
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Help/BGshade/ScrollContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[b]How To Play[/b]"
fit_content = true
autowrap_trim_flags = 64
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Help/BGshade/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "
Get a hand value closer to 21 than the dealer without going over 21."
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Help/BGshade/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Game Start

Player and dealer each receive two cards.

One of the dealer’s cards remains face down."
horizontal_alignment = 1

[node name="Label4" type="Label" parent="Help/BGshade/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Player Actions

Hit → Draw another card to increase your total.

Stand → Keep your total and end your turn."
horizontal_alignment = 1

[node name="Label5" type="Label" parent="Help/BGshade/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Dealer Rules

After the player stands, the dealer:

Must draw cards until reaching 17 or higher

Must stand on 17 or higher

If the dealer goes over 21, the player wins automatically"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="Help/BGshade/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Dealer Rules

After the player stands, the dealer:

Must draw cards until reaching 17 or higher

Must stand on 17 or higher

If the dealer goes over 21, the player wins automatically"
horizontal_alignment = 1

[node name="Label7" type="Label" parent="Help/BGshade/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Winning Conditions

Player total is closer to 21 than the dealer → Player wins

Player hits 21 exactly → Win (Blackjack bonus if from initial two cards)

Player total over 21 → Bust (lose instantly)

Dealer total over 21 → Dealer busts (player wins)

Same total → Push (tie)"
horizontal_alignment = 1

[node name="Label8" type="Label" parent="Help/BGshade/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Number cards (2–10) = face value

Face cards (J, Q, K) = 10

Ace (A) = 1 or 11, whichever is better for your hand"
horizontal_alignment = 1

[node name="BackBtn" type="Button" parent="Help"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -303.0
offset_top = -53.0
grow_horizontal = 0
grow_vertical = 0
text = "< Return"

[node name="Settings" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_shbfh")

[node name="BGshade2" type="ColorRect" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="MarginContainer" type="MarginContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="volume" type="HSlider" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="mute" type="CheckBox" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mute"

[node name="resolutions" type="OptionButton" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
selected = 2
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="BackBtn" type="Button" parent="Settings"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 231.0
offset_right = 303.0
offset_bottom = 284.0
grow_vertical = 2
text = "< Return"
